XWIKI-1682: Fullscreen doesn't work on IE6 or IE7 Fixed. Applied patch from Evelina Slatineanu without changes.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/web/trunk@4870 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-web/standard/src/main/webapp/skins/albatross/fullscreenEdit.css
+++ b/xwiki-platform-web/standard/src/main/webapp/skins/albatross/fullscreenEdit.css
@@ -14,7 +14,7 @@
 }
 html > body #show-dialog-btn {
   right: 1px;
-  top: 1px
+  top: 1px;
 }
 
 .leftmenu2 {
@@ -58,13 +58,14 @@ html > body #show-dialog-btn {
   bottom: 0px;
   overflow:hidden;
 }
+
 * html #fullscreen-dlg-body {
   height: 100%;
   top: 0px; left: 0px; right: 0px; bottom: 0px;
   position: relative;
 }
 
-#fullscreen-dlg-body-tab {
+#fullscreen-dlg-body-tab-wiki, #fullscreen-dlg-body-tab-wysiwyg {
   background-color: #fff;
   border:1px solid #6593cf;
   position: absolute;
@@ -75,49 +76,61 @@ html > body #show-dialog-btn {
   top: 20px;
   text-align:center;
 }
-* html #fullscreen-dlg-body-tab {
+
+* html #fullscreen-dlg-body-tab-wiki {
   width: 99%;
-  height: 85%;
+  height: 90%;
   top: 0px; left: 0.5%; right: 0px; bottom: 0px;
   position: relative;
 }
 
-#fullscreen-dlg-body-tab textarea {
-  position: absolute;
-  left: 3px;
-  right: 3px;
-  top: 20px;
-  bottom: 3px;
-  width: auto !important;
-  height: auto !important;
+* html #fullscreen-dlg-body-tab-wysiwyg {
+  width: 99%;
+  height: 88%;
+  top: 0px; left: 0.5%; right: 0px; bottom: 0px;
+  position: relative;
 }
-* html #fullscreen-dlg-body-tab textarea {
-  width: 99% !important;
-  height: 98% !important;
+
+#fullscreen-dlg-body-tab-wiki textarea {
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 20px;
+  bottom: 0px;
+  width: 99.5% !important;
+  height: 95% !important;
+}
+
+#fullscreen-dlg-body-tab-wysiwyg textarea {
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 20px;
+  bottom: 0px;
+  width: 99.5% !important;
+  height: 99% !important;
+}
+
+* html #fullscreen-dlg-body-tab-wysiwyg textarea  {
+  width: 100% !important;
+  height: 100% !important;
   position: static;
 }
-#fullscreen-dlg-body-tab td {
+
+* html #fullscreen-dlg-body-tab-wiki textarea  {
+  width: 100% !important;
+  height: 96.5% !important;
+  position: static;
+}
+
+#fullscreen-dlg-body-tab-wysiwyg td, #fullscreen-dlg-body-tab-wiki td {
   text-align: center;
 }
 
-#parentswapDiv iframe {
-  width: auto !important;
-  height: auto !important;
-  position: absolute;
-  left: 0px;
-  top: 27px;
-  right: 0px;
-  bottom: 0px;
-}
 * html #parentswapDiv iframe {
   position: static;
   height: 99.6% !important;
   width: 100% !important;
-}
-
-#parentswapDiv table {
-  width: 100% !important;
-  height: 100% !important;
 }
 
 #parentswapDiv {
